# BlockScholes-RAG-with-Improvements

./: .gitignore  EVAL_RUBRIC.md  README.md  generate_eval_pdf.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
data/processed/: bm25_chunk_ids.json  doc_hashes.json  index_manifest.json
src/: app.py  run_pipeline.py
src/ablation/: __init__.py  config.py  judge.py  metrics.py  queries.py  runner.py  tracker.py
src/chunking/: chunker.py  fixed_chunker.py  hierarchical_chunker.py  semantic_chunker.py
src/config/: cohere_client.py  gemini_client.py  openai_client.py  qdrant_client.py  settings.py
src/embedding/: embedder.py
src/generation/: citation_verifier.py  context_assembler.py  generator.py  models.py  prompts.py  vision_generator.py
src/indexing/: bm25_index.py  collection_manager.py  indexer.py  upserter.py
src/ingestion/: cleaner.py  deduplicator.py  ingestor.py  metadata_extractor.py  models.py  pdf_parser.py  visual_detector.py
src/pipelines/: baseline_pipeline.py  enhanced_pipeline.py  gemini_pipeline.py  models.py  query_logger.py
src/query_processing/: classifier.py  rewriter.py  scope_detector.py
src/retrieval/: dense_retriever.py  hybrid_merger.py  parent_fetcher.py  reranker.py  sparse_retriever.py  visual_router.py
src/utils/: corpus_stats.py  logger.py  page_renderer.py  retry.py  timer.py  token_counter.py
tests/: test_citation_verifier.py  test_page_renderer.py  test_pipelines.py  test_rrf_merger.py  test_token_counter.py  test_visual_detector.py  test_visual_router.py
