[tool.poetry]
name = "block-scholes-rag"
version = "0.1.0"
description = "Production RAG system for Block Scholes crypto volatility research"
authors = []
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.11"
qdrant-client = "*"
openai = "*"
google-genai = "*"
cohere = "*"
rank-bm25 = "*"
langchain-text-splitters = "*"
pdfplumber = "*"
pymupdf = "*"
tiktoken = "*"
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
sentence-transformers = "*"
pdf2image = "*"
Pillow = "*"
pypdf = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
